--- a/.htaccess
+++ b/.htaccess
@@ -1,6 +1,7 @@
 # Arquivo de configuração do Apache para reescrita de URLs
 # Habilita o módulo de reescrita
 RewriteEngine On
+RewriteBase /projetowebservidor/
 
 # Redireciona todas as requisições para index.php
 # exceto arquivos e diretórios que realmente existem
